cluster_conf/monitor/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: kube-system
spec:
  rules:
  - host: grafana.orange.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-prome
  namespace: kube-system
spec:
  rules:
  - host: prometheus.orange.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
